--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.3 || ^8.0",
         "codeigniter4/framework": "^4",
         "firebase/php-jwt": "^5.4",
-        "agungsugiarto/codeigniter4-cors": "^2.0"
+        "agungsugiarto/codeigniter4-cors": "^2.0",
+        "midtrans/midtrans-php": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
