--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "codeigniter4/framework": "^4",
         "firebase/php-jwt": "^5.4",
         "agungsugiarto/codeigniter4-cors": "^2.0",
-        "midtrans/midtrans-php": "^2.5"
+        "midtrans/midtrans-php": "^2.5",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
